--- a/flutter_foundations_rezo/pubspec.yaml
+++ b/flutter_foundations_rezo/pubspec.yaml
@@ -31,12 +31,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  provider: ^6.1.1
+  flutter_riverpod: ^2.4.10
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
