--- a/flutter_foundations_rezo/pubspec.yaml
+++ b/flutter_foundations_rezo/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.10
+  freezed_annotation: ^2.4.1
 dev_dependencies:
+  build_runner: ^2.4.8
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
