--- a/repo_viewer_app/pubspec.yaml
+++ b/repo_viewer_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.10
+  http: ^1.2.0
   oauth2: ^2.0.2
   webview_flutter: ^4.5.0
 
