--- a/repo_viewer_app/pubspec.yaml
+++ b/repo_viewer_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.10
   http: ^1.2.0
+  material_design_icons_flutter: ^7.0.7296
   oauth2: ^2.0.2
   webview_flutter: ^4.5.0
 
