--- a/widgets_app/pubspec.yaml
+++ b/widgets_app/pubspec.yaml
@@ -7,14 +7,15 @@ environment:
   sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
+  animate_do: ^3.3.4
   flutter:
     sdk: flutter
   go_router: ^14.1.3
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
